# bot-todoist

./: README.md  pyproject.toml
app/: bot.py  keyboards.py  todoist_utils.py
