[tool.poetry]
name = "bot-todoist"
version = "0.1.0"
description = ""
authors = ["Dmitry <erofeevdma@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
todoist-api-python = "^2.1.7"
aiogram = "^3.13.1"
python-dotenv = "^1.0.1"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
